# DRF_API_Logger

./: README.rst  db.sqlite3
djangoProject/: settings.py  urls.py
peter-sample-drf-app/: LICENSE  README.rst  setup.cfg
peter-sample-drf-app/peter_sample_dfr_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
peter-sample-drf-app/requestLogger/: apps.py  urls.py  views.py
peter-sample-drf-app/requestLogger/migrations/: 0002_modelchangelog.py
requestLogger/: admin.py  apps.py  models.py  serializers.py  signals.py
requestLogger/migrations/: 0001_initial.py
