[metadata]
name = peter-sample-dfr-app
version = 1.0.0
description = Logs request and responses to the database
long_description = file: README.rst
long_description_content_type = text/markdown
author = Petros
author_email = petrosbeyene611@gmail.com
license = MIT
url = https://github.com/petrosbeyene/DRF_API_Logger
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
install_requires =
    Django>=3.2.0
    pytz>=2021.1

[options.extras_require]
dev =
    black
    flake8
    isort

[options.packages.find]
exclude =
    tests*
    test*
    django_project*
